# milter-autoref

./: .dockerignore  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  LICENSE  README.md  _config.yml  docker-compose.yml  pyproject.toml
.github/workflows/: dockerhub-description.yml  release.yml  tests.yml
_includes/: head-custom.html
src/milter_autoref/: __init__.py  __main__.py  config.py  logic.py  milter.py
tests/: test_config.py  test_integration.py  test_logic.py  test_main.py  test_milter.py
