[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "milter-autoref"
dynamic = ["version"]
description = "Postfix milter that appends Message-ID to References to fix email threading through AWS SES"
authors = [{name = "Jonathan Csanyi", email = "jcsanyi@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pymilter>=1.0.5"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "miltertest>=1.0.0", "hypothesis>=6.0"]

[project.scripts]
milter-autoref = "milter_autoref.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "--hypothesis-show-statistics"]
